kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scm-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scm-app
  template:
    metadata:
      labels:
        app: scm-app
    spec:
      containers:
      - name: scm-app
        image: smartcontactmanager-pipeline-app:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
