kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scm-service
spec:
  selector:
    app: scm-app
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
