kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scm-ingress
spec:
  rules:
  - host: scm.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scm-service
            port:
              number: 80
